# tuto-packaging

./: MANIFEST.in  pyproject.toml  setup.cfg
.github/workflows/: main.yml
first_python_package.egg-info/: SOURCES.txt
src/first_python_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/imppkg/: harmonic_mean.py  harmony.py
test/__pycache__/: test_harmonic_mean.py
