[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/username/package/reponame
author_email = given.family@example.com
description = This package does amazing things
licence_file = LICENSE
long_description = file: README.md
include_package_data = True
python_requires = >=3.9

[options]
install_requires = 
    termcolor>=1.1.0,<2


[options.entry_points]
console_script =
    harmony = imppkg.harmony:main

[tool:pytest]
testpaths = test

[coverage:run]
source = imppkg
branch = True

[tox:tox]
isolated_build = True  
envlist = py39,py38

[testenv]
deps =
    pytest
    pytest-cov 
    pytest-randomly

[testenv:get_my_ip]
deps = 
    requests
commands =
    python -c "import requests; print(requests.get('https://canhazip.com').text)"

[testenv:typecheck]
deps =
    pytest
    mypy 
    types-termcolor
commands = 
    mypy --ignore-missing-imports {posargs:src test}

[testenv:format]
deps =
    black
commands =
    black {posargs: --check --diff src test}
skip_install = True

[testenv:lint]
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs: src test}

[flake8]
max-line-length=120